notification/deployments/canary/canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-deployment-notification
  namespace: notification
  labels:
    app: notification
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
      version: canary
  template:
    metadata:
      labels:
        app: notification
        version: canary
    spec:
      containers:
      - name: notification-service
        image: docker.io/library/msa-notification-service:latest
        imagePullPolicy: "Never" # for local in minikube
        ports:
        - containerPort: 8083
        startupProbe:
          httpGet:
            path: /start-up
            port: 8083
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8083
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 8083
          initialDelaySeconds: 15
          periodSeconds: 10
