notification/deployments/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: notification
spec:
  selector:
    app: notification
  ports:
  - protocol: TCP
    port: 83
    targetPort: 8083
